# ssh-manager

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
ssh_manager/: app.py
ssh_manager/screens/: __init__.py  edit_ssh_config.py  main_screens.py  ssh_conn_screens.py
ssh_manager/ui/: main_ui.py  ssh_conn_ui.py
ssh_manager/utils/: __init__.py  ssh_configs.py  ssh_util.py  terminal_util.py
ssh_manager/widgets/: __init__.py  add_forward_modal.py  editor.py  host_list.py  proxy_table.py
tests/: Dockerfile  README.md  docker-compose.yml  test_parse_ssh_config_text.py
