[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ssh_manager"
version = "0.1.0"
description = "manage ssh"
requires-python = ">=3.10"

dependencies = [
    "textual",
    "textual-dev",
    "paramiko",
    "pydantic",
]

[project.scripts]
mssh = "ssh_manager.app:main"
