[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ssh_manager"
version = "0.2.0"
description = "A terminal SSH connection manager with TUI for managing configs, port forwarding, and quick connections"
requires-python = ">=3.10"

dependencies = [
    "textual",
    "textual-dev",
    "pydantic",
    "pyperclip"
]

[project.scripts]
mssh = "ssh_manager.app:main"
